# kalanjiyam

./: .env.bak  .env.example  .flaskenv  .gitignore  DEEPSEEK_OCR_README.md  Makefile  README.md  __init__.py  auth.py  checks.py  cli.py  config.py  consts.py  install_log.txt  kalanjiyam.db  mail.py  migrate.txt  package-lock.json  package.json  pyproject.toml  queries.py  requirements.txt  run_dev_server.py  tailwind.config.js  test_deepseek_ocr.py  verify.txt  wsgi.py
deploy/: README.md
docs/: batch-ocr-task-tracking.rst  creating-data-from-the-command-line.rst  i18n-and-l10n.rst  index.rst  kalanjiyam.md  multi-tenant.rst  ocr-api.rst  ocr-comparison.md  ocr-editing.rst  production-deploy.rst  quickstart.rst  running-in-production.rst
kalanjiyam/: __init__.py  admin.py  admin_user.py  checks.py  database.py  enums.py  queries.py
models/: auth.py  base.py  blog.py  dictionaries.py  group.py  parse.py  proofing.py  site.py  talk.py  texts.py
scripts/: README.md  add_ocr_comparison_table.py  backfill_page_documents.py  fetch_i18n_files.py  import_pdfs.py  migrate_multi_tenant.py  start_server_prod.sh
seed/: dcs.py
static/: manifest.json
tasks/: __init__.py  ocr.py  projects.py  translation.py
templates/: 403.html  404.html  413.html  500.html  base-auth-form.html  base-text.html  base.html  header-main-footer.html  index.html
test/: README.md
utils/: chandra_ocr.py  deepseek_ocr.py  google_ocr.py  nanonets_ocr.py  ocr_engine.py  parse_alignment.py  proofing_utils.py  qwen3_ocr.py  revisions.py  surya_gpu_config.py  surya_ocr.py  tei_parser.py  (+3 more)
(+252 files in other folders)
