[project]
name = "kalanjiyam"
version = "0.1.0"
description = "An open Siddha Knowledge Systems library"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.8",
    "Babel>=2.12",
    "bcrypt>=4.0",
    "celery>=5.2",
    "click>=8.1",
    "conllu>=4.5",
    "email-validator>=1.2",
    "Flask>=2.1",
    "Flask-Admin>=1.6",
    "Flask-Babel>=3.0",
    "Flask-Bcrypt>=1.0",
    "Flask-Login>=0.6",
    "Flask-Mail>=0.9",
    "Flask-WTF>=1.0",
    "google-cloud-vision>=3.1",
    "gunicorn>=21.2",
    "indic-transliteration>=2.3",
    "kombu>=5.2",
    "linkify-it-py>=2.0",
    "lxml>=4.9",
    "markdown-it-py>=2.1",
    "Pillow>=9.1",
    "psycopg2-binary>=2.9",
    "PyMuPDF>=1.20",
    "python-dateutil>=2.8",
    "python-dotenv>=0.20",
    "python-slugify>=6.1",
    "redis>=4.3",
    "requests>=2.27",
    "sentry-sdk>=1.6",
    "SQLAlchemy>=1.4,<2.0",
    "Werkzeug>=2.1",
    "WTForms>=3.0",
    "wtforms-sqlalchemy>=0.3",
    "Flask-WTF>=1.0",
    "python-dotenv>=0.20",
    "aksharamukha>=2.3",
    "indic-transliteration>=2.3",
    "python-Levenshtein>=0.27",
    "httpx>=0.24",
    "jiwer>=3.0",
    "regex>=2022.6",
]

[dependency-groups]
dev = [
    "pytest>=7.1",
    "pytest-cov>=4.0",
    "black>=22.3",
    "ruff>=0.1",
]

[tool.coverage.run]
omit = [
    "kalanjiyam/scripts/*",
    "kalanjiyam/seed/**",
]

[tool.ruff]
select = [
    "B",
    "F",
    "N818",
    "UP",
    "W",
    "I001",
]
ignore = [
    "B007",
    "B905",
]
